Add plot and table to README.md

--- a/S2 - Mock Catalogue.ipynb
+++ b/S2 - Mock Catalogue.ipynb
@@ -1491,18 +1491,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "aa0ce15f",
    "metadata": {},
    "outputs": [],
    "source": [
     "mock_catalogue = pd.DataFrame(data = {\"t\": t_obs, \"t_date\": t_dates, \"RA\": RA_points, \"Dec\": Dec_points, \"VR\": VR_points})\n",
-    "mock_catalogue[\"t_date\"] = mock_catalogue[\"t_date\"].dt.strftime(\"%Y-%d-%m\")\n"
+    "\n",
+    "mock_catalogue['t'] = mock_catalogue['t'].map('{:.5f}'.format)\n",
+    "mock_catalogue[\"t_date\"] = mock_catalogue[\"t_date\"].dt.strftime(\"%Y-%d-%m\")\n",
+    "mock_catalogue['RA'] = mock_catalogue['RA'].map('{:.5f}'.format)\n",
+    "mock_catalogue['Dec'] = mock_catalogue['Dec'].map('{:.5f}'.format)\n",
+    "mock_catalogue['VR'] = mock_catalogue['VR'].map('{:.0f}'.format)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "386daf8d",
    "metadata": {},
    "outputs": [
@@ -1537,43 +1542,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018.082136</td>\n",
+       "      <td>2018.08214</td>\n",
        "      <td>2018-30-01</td>\n",
-       "      <td>-0.032344</td>\n",
-       "      <td>-0.005679</td>\n",
-       "      <td>3305.149819</td>\n",
+       "      <td>-0.03234</td>\n",
+       "      <td>-0.00568</td>\n",
+       "      <td>3305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018.164271</td>\n",
+       "      <td>2018.16427</td>\n",
        "      <td>2018-01-03</td>\n",
-       "      <td>-0.026324</td>\n",
-       "      <td>-0.009602</td>\n",
-       "      <td>3674.025965</td>\n",
+       "      <td>-0.02632</td>\n",
+       "      <td>-0.00960</td>\n",
+       "      <td>3674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018.246407</td>\n",
+       "      <td>2018.24641</td>\n",
        "      <td>2018-31-03</td>\n",
-       "      <td>-0.018279</td>\n",
-       "      <td>-0.012723</td>\n",
-       "      <td>4040.137639</td>\n",
+       "      <td>-0.01828</td>\n",
+       "      <td>-0.01272</td>\n",
+       "      <td>4040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018.265572</td>\n",
+       "      <td>2018.26557</td>\n",
        "      <td>2018-07-04</td>\n",
-       "      <td>-0.015993</td>\n",
-       "      <td>-0.013199</td>\n",
-       "      <td>4107.089959</td>\n",
+       "      <td>-0.01599</td>\n",
+       "      <td>-0.01320</td>\n",
+       "      <td>4107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018.284736</td>\n",
+       "      <td>2018.28474</td>\n",
        "      <td>2018-14-04</td>\n",
-       "      <td>-0.013512</td>\n",
-       "      <td>-0.013540</td>\n",
-       "      <td>4093.613599</td>\n",
+       "      <td>-0.01351</td>\n",
+       "      <td>-0.01354</td>\n",
+       "      <td>4094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1585,43 +1590,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>299</th>\n",
-       "      <td>2072.422998</td>\n",
+       "      <td>2072.42300</td>\n",
        "      <td>2072-03-06</td>\n",
-       "      <td>-0.009625</td>\n",
-       "      <td>0.175983</td>\n",
-       "      <td>-412.508223</td>\n",
+       "      <td>-0.00962</td>\n",
+       "      <td>0.17598</td>\n",
+       "      <td>-413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
-       "      <td>2072.915811</td>\n",
+       "      <td>2072.91581</td>\n",
        "      <td>2072-30-11</td>\n",
-       "      <td>-0.015324</td>\n",
-       "      <td>0.177428</td>\n",
-       "      <td>-334.272272</td>\n",
+       "      <td>-0.01532</td>\n",
+       "      <td>0.17743</td>\n",
+       "      <td>-334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>301</th>\n",
-       "      <td>2073.408624</td>\n",
+       "      <td>2073.40862</td>\n",
        "      <td>2073-30-05</td>\n",
-       "      <td>-0.020910</td>\n",
-       "      <td>0.177737</td>\n",
-       "      <td>-263.691298</td>\n",
+       "      <td>-0.02091</td>\n",
+       "      <td>0.17774</td>\n",
+       "      <td>-264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>302</th>\n",
-       "      <td>2073.901437</td>\n",
+       "      <td>2073.90144</td>\n",
        "      <td>2073-26-11</td>\n",
-       "      <td>-0.026386</td>\n",
-       "      <td>0.177065</td>\n",
-       "      <td>-219.840365</td>\n",
+       "      <td>-0.02639</td>\n",
+       "      <td>0.17707</td>\n",
+       "      <td>-220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>303</th>\n",
-       "      <td>2074.394251</td>\n",
+       "      <td>2074.39425</td>\n",
        "      <td>2074-24-05</td>\n",
-       "      <td>-0.031707</td>\n",
-       "      <td>0.175399</td>\n",
-       "      <td>-149.298892</td>\n",
+       "      <td>-0.03171</td>\n",
+       "      <td>0.17540</td>\n",
+       "      <td>-149</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1629,23 +1634,23 @@
        "</div>"
       ],
       "text/plain": [
-       "               t      t_date        RA       Dec           VR\n",
-       "0    2018.082136  2018-30-01 -0.032344 -0.005679  3305.149819\n",
-       "1    2018.164271  2018-01-03 -0.026324 -0.009602  3674.025965\n",
-       "2    2018.246407  2018-31-03 -0.018279 -0.012723  4040.137639\n",
-       "3    2018.265572  2018-07-04 -0.015993 -0.013199  4107.089959\n",
-       "4    2018.284736  2018-14-04 -0.013512 -0.013540  4093.613599\n",
-       "..           ...         ...       ...       ...          ...\n",
-       "299  2072.422998  2072-03-06 -0.009625  0.175983  -412.508223\n",
-       "300  2072.915811  2072-30-11 -0.015324  0.177428  -334.272272\n",
-       "301  2073.408624  2073-30-05 -0.020910  0.177737  -263.691298\n",
-       "302  2073.901437  2073-26-11 -0.026386  0.177065  -219.840365\n",
-       "303  2074.394251  2074-24-05 -0.031707  0.175399  -149.298892\n",
+       "              t      t_date        RA       Dec    VR\n",
+       "0    2018.08214  2018-30-01  -0.03234  -0.00568  3305\n",
+       "1    2018.16427  2018-01-03  -0.02632  -0.00960  3674\n",
+       "2    2018.24641  2018-31-03  -0.01828  -0.01272  4040\n",
+       "3    2018.26557  2018-07-04  -0.01599  -0.01320  4107\n",
+       "4    2018.28474  2018-14-04  -0.01351  -0.01354  4094\n",
+       "..          ...         ...       ...       ...   ...\n",
+       "299  2072.42300  2072-03-06  -0.00962   0.17598  -413\n",
+       "300  2072.91581  2072-30-11  -0.01532   0.17743  -334\n",
+       "301  2073.40862  2073-30-05  -0.02091   0.17774  -264\n",
+       "302  2073.90144  2073-26-11  -0.02639   0.17707  -220\n",
+       "303  2074.39425  2074-24-05  -0.03171   0.17540  -149\n",
        "\n",
        "[304 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,14 +1761,6 @@
     "\n",
     "fig.subplots_adjust(wspace = 0.01, hspace = 0, left = 0.1, right = 0.9, top = 0.98, bottom = 0.06)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ec75081",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
